# amrit-repos

./: Dockerfile  README.md  code-documentation.md  package-lock.json
.github/workflows/: bearer.yml  component-container-image-security.yml  component-container-image.yml  component-java-lint.yml  component-java-test.yml  component-python-lint.yaml  component-python-security.yml  component-security-scan.yml  component-security-trivy.yml  component-ts-lint.yml  component-ts-test.yml  container-image-component.yml  dashboard-workflow-ts.yml  java-build.yml  java-docker.yml  java-lint-component.yml  java-lint.yml  java-security.yml  java-test-component.yml  java-test.yml  java-workflow.yml  python-docker.yaml  python-security.yml  python-tox.yaml  security-trivy-component.yml  ts-build.yml  ts-lint.yml  ts-test.yml  workflow-gateway.yml  workflow-java.yml  workflow-python-filechecker-api.yml  workflow-python-filechecker-wrapper.yml  workflow-python.yml  workflow-ts.yml
airflow-demo-instance/: .env  Dockerfile  README.md  compose.override.yml  run-airflow.sh
argo-file-checker-python/: Dockerfile  README.md
argofilechecker-python-wrapper/: .gitignore  Dockerfile  README.md  pyproject.toml  tox.ini
argofilechecker-python-wrapper/demo_scripts/: demo_docker.py  demo_test.py
argofilechecker-python-wrapper/src/argofilechecker_python_wrapper/: __init__.py  file_checker.py  models.py
argofilechecker-python-wrapper/test_scripts/: demo_test.py
argofilechecker-python-wrapper/test_scripts/test_data/: 1902735_tech.nc  1902735_tech_2.nc
argofilechecker-python-wrapper/tests/: conftest.py  test_argo_data_validation.py  test_filechecker.py
dashboard/: .eslintrc.json  .gitlab-ci.yml  Dockerfile  cypress.config.ts  eslint.config.mjs  jest.config.ts  next.config.ts  package-lock.json  package.json  tsconfig.jest.json
dashboard/__mocks__/: jose.ts
dashboard/__tests__/: Home.test.tsx
dashboard/src/: middleware.ts
docs/: passport-request-system.md
example-python/: .gitignore  Dockerfile  pyproject.toml  tox.ini
example-python/example/: __init__.py  __main__.py  example.py  main.py
example-python/tests/: test_example.py  test_main.py
flutter_demo/: README.md
flutter_demo/lib/: database.dart  qr.dart
gateway/: .gitlab-ci.yml  Dockerfile  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
gateway-sandbox/: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  client.py  docker-compose.yml  requirements.txt
gateway-sandbox/app/: main.py
gateway-sandbox/dummy_data/: test_1.json  test_2.json  test_3.json
gateway-sandbox/peers/: peers_2.txt  peers_3.txt
gateway/src/: all-exceptions.filter.ts  app.controller.spec.ts  app.module.ts  app.service.ts  main.ts
gateway/test/: alerta.e2e-spec.ts  app.e2e-spec.ts  config-service.mock.ts
goos-metadata-standard/: LICENCE  README.md  goosmeta.ttl
goos-metadata-standard/context/: activation.jsonld  country.jsonld  deactivation.jsonld  deployment.jsonld  goos_mission.jsonld  location.jsonld  log.jsonld  mission.jsonld  mission_network.jsonld  observation.jsonld  observation_setup.jsonld  observing_system.jsonld  organization.jsonld  organization_contribution.jsonld  organization_role.jsonld  platform.jsonld  platform_model.jsonld  platform_type.jsonld  program.jsonld  sensor-model.jsonld  sensor.jsonld  sensor_model.jsonld  sensor_setup.jsonld  ship.jsonld  status_event.jsonld  status_type.jsonld  telecom.jsonld  telecom_device.jsonld  telecom_technology.jsonld  telecom_type.jsonld  variable-setup.jsonld  variable.jsonld  wigos_program.jsonld
goos-metadata-standard/example/: activation.example.jsonld  country.example.jsonld  deactivation.example.jsonld  goos_mission.example.jsonld  location.example.jsonld  log.example.json  mission_network.example.jsonld  observation.example.jsonld  observing_system.example.jsonld  organization.example.jsonld  organization_contribution.example.jsonld  organization_role.example.jsonld  passport.example.jsonld  platform.example.jsonld  platform_model.example.json  platform_type.example.jsonld  sensor.example.jsonld  sensor_model.example.jsonld  sensor_setup.example.jsonld  ship.example.jsonld  status_event.example.jsonld  status_type.example.jsonld  telecom_device.example.jsonld  telecom_technology.example.jsonld  variable.example.jsonld  wigos_program.example.jsonld
goos-metadata-standard/ontology/: activation.ttl  country.ttl  deactivation.ttl  deployment.ttl  goos_mission.ttl  location.ttl  log.ttl  mission.ttl  mission_network.ttl  observation.ttl  observation_setup.ttl  observing_system.ttl  organization.ttl  organization_contribution.ttl  organization_role.ttl  platform.ttl  platform_model.ttl  platform_type.ttl  program.ttl  sensor-model.ttl  sensor.ttl  sensor_model.ttl  sensor_setup.ttl  ship.ttl  status_event.ttl  status_type.ttl  telecom.ttl  telecom_device.ttl  telecom_technology.ttl  telecom_type.ttl  variable.ttl  variable_setup.ttl  wigos-program.ttl  wigos_program.ttl
goos-metadata-standard/schema/: activation.schema.json  country.schema.json  log.schema.json  (+24 more)
java-demo/: .dockerignore  .gitignore  .sdkmanrc  CHANGELOG.md  CITATION.cff  Dockerfile  README.md  compose.postgresql.yaml  compose.registry.yaml  compose.sonarqube.yaml  compose.spring-support.yaml  compose.trivy.yaml  compose.yaml  pom.xml
jsonld-validation/: .gitignore  README.md  requirements.txt  validate.py
oceanjson/: README.md  context.jsonld  webpage.md
oceanmeta/: index.html  oceanmeta.ttl  vite.config.ts
python-kubernetes-helm/: Dockerfile  README.md  compose.yaml  helmfile.yaml  pyproject.toml
python-kubernetes-helm/helm-chart/: values.yaml
python-kubernetes-helm/helm-chart/templates/: argo-file-checker-api-deployment.yaml  argo-file-checker-service.yaml  boilerplate-api-deployment.yaml  boilerplate-api-service.yaml  deployment.yaml  ingress.yaml  service.yaml
python-kubernetes-helm/python_kubernetes_helm/: app.py
typescript-demo/: Dockerfile  README.md  cypress.config.ts  jest.config.ts  jest.setup.ts  package-lock.json  package.json  tsconfig.json
(+436 files in other folders)
